--- a/Assets/InfiniteRunnerEngine/Common/Scripts/MoreMountains.InfiniteRunnerEngine.asmdef
+++ b/Assets/InfiniteRunnerEngine/Common/Scripts/MoreMountains.InfiniteRunnerEngine.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:4a1cb1490dc4df8409b2580d6b44e75e",
         "GUID:8087d854c1f812e4b9a74437dfc524e0",
-        "GUID:6beab0bf0f222b74b868dbe4bcfa23cf"
+        "GUID:6beab0bf0f222b74b868dbe4bcfa23cf",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
