--- a/Assets/Paywall/Scripts/Editor/Paywall.Editor.asmdef
+++ b/Assets/Paywall/Scripts/Editor/Paywall.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:569fdf609bb7e634cbd9f618d23a2d34",
         "GUID:6beab0bf0f222b74b868dbe4bcfa23cf",
-        "GUID:4a1cb1490dc4df8409b2580d6b44e75e"
+        "GUID:4a1cb1490dc4df8409b2580d6b44e75e",
+        "GUID:1337ee4953b20ba44936f5fd408288ca"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
