--- a/Assets/Paywall/Scripts/Editor/Paywall.Editor.asmdef
+++ b/Assets/Paywall/Scripts/Editor/Paywall.Editor.asmdef
@@ -5,7 +5,9 @@
         "GUID:569fdf609bb7e634cbd9f618d23a2d34",
         "GUID:6beab0bf0f222b74b868dbe4bcfa23cf",
         "GUID:4a1cb1490dc4df8409b2580d6b44e75e",
-        "GUID:1337ee4953b20ba44936f5fd408288ca"
+        "GUID:1337ee4953b20ba44936f5fd408288ca",
+        "GUID:43b37b65ff3d2674ebb5ab8bb2ea4e1a",
+        "GUID:d9dbf313afb206f458581847ac758375"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
